--- a/fly.toml
+++ b/fly.toml
@@ -1,31 +1,22 @@
-# fly.toml file generated for piano-notes on 2023-12-26T12:02:18-03:00
+# fly.toml app configuration file generated for personal-study on 2023-11-23T14:42:21-03:00
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
 
 app = "piano-notes"
-kill_signal = "SIGINT"
-kill_timeout = 5
-mounts = []
-processes = []
+primary_region = "gru"
 
 [build]
-  builder = "heroku/buildpacks:20"
 
-[env]
-  PORT = "8080"
-
-[[services]]
-  internal_port = 8080
+[http_service]
+  internal_port = 3000
+  force_https = true
+  auto_stop_machines = true
+  auto_start_machines = true
+  min_machines_running = 0
   processes = ["app"]
-  protocol = "tcp"
-  [services.concurrency]
-    hard_limit = 25
-    soft_limit = 20
-    type = "connections"
 
-  [[services.ports]]
-    force_https = true
-    handlers = ["http"]
-    port = 80
-
-  [[services.ports]]
-    handlers = ["tls", "http"]
-    port = 443
+[[vm]]
+  cpu_kind = "shared"
+  cpus = 1
+  memory_mb = 1024
